--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -2,21 +2,54 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="org.example.demo.HelloController">
-    <padding>
-        <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
-    </padding>
-   <TextField fx:id="documentID" promptText="ID" />
-   <TextField fx:id="documentName" promptText="Book name" />
-   <TextField fx:id="documentAuthor" promptText="Author" />
+<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.AppController">
+   <children>
+      <ListView fx:id="documentList" prefHeight="200.0" prefWidth="200.0" />
+      <TabPane>
+         <tabs>
+            <Tab closable="false" text="Add">
+               <content>
+                  <VBox alignment="CENTER" spacing="20.0">
+                      <padding>
+                          <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
+                      </padding>
+                     <TextField fx:id="documentAddID" promptText="ID" />
+                     <TextField fx:id="documentAddName" promptText="Book name" />
+                     <TextField fx:id="documentAddAuthor" promptText="Author" />
 
-    <Label fx:id="welcomeText" />
-    <Button onAction="#onAddButtonClick" text="Add!">
-      <VBox.margin>
-         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-      </VBox.margin></Button>
-</VBox>
+                      <Button fx:id="addButton" onAction="#onAddButtonClick" text="Add!">
+                        <VBox.margin>
+                           <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        </VBox.margin>
+                     </Button>
+                  </VBox>
+               </content>
+            </Tab>
+            <Tab closable="false" text="Remove">
+               <content>
+                  <VBox alignment="CENTER" spacing="20.0">
+                     <padding>
+                        <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
+                     </padding>
+                     <children>
+                        <TextField fx:id="documentRemoveID" promptText="ID" />
+                        <Button onAction="#onRemoveButtonClick" text="Remove!">
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
+   </children>
+</HBox>
