Add script to generate tables with sample data

--- a/src/main/resources/org/example/demo/AdminView.fxml
+++ b/src/main/resources/org/example/demo/AdminView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.AppController">
+<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.AdminView">
    <children>
       <ListView fx:id="documentList" prefHeight="200.0" prefWidth="200.0" />
       <TabPane>
