--- a/src/main/resources/org/example/demo/LoginView.fxml
+++ b/src/main/resources/org/example/demo/LoginView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.LoginScreenController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.LoginView">
    <children>
       <TextField fx:id="loginUsernameField" promptText="Username" />
       <TextField fx:id="loginPasswordField" promptText="Password" />
