--- a/src/main/resources/org/example/demo/StudentView.fxml
+++ b/src/main/resources/org/example/demo/StudentView.fxml
@@ -1,10 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.StudentView">
+<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.AdminView">
    <children>
       <ListView fx:id="documentList" prefHeight="200.0" prefWidth="200.0" />
+      <TabPane>
+         <tabs>
+            <Tab closable="false" text="Issue">
+               <content>
+                  <VBox alignment="CENTER" prefHeight="472.0" prefWidth="349.0" spacing="20.0">
+                     <children>
+                        <TextField fx:id="documentAddID" promptText="ID">
+                           <VBox.margin>
+                              <Insets left="100.0" right="100.0" top="100.0" />
+                           </VBox.margin></TextField>
+                        <TextField promptText="Duration">
+                           <VBox.margin>
+                              <Insets left="100.0" right="100.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <Button fx:id="borrowButton" onAction="#onBorrowButtonClick" text="Borrow">
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </VBox.margin>
+                        </Button>
+                        <ListView fx:id="documentIssuedList" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
    </children>
 </HBox>
