--- a/src/main/resources/org/proview/test/AdminView.fxml
+++ b/src/main/resources/org/proview/test/AdminView.fxml
@@ -23,12 +23,20 @@
                      <TextField fx:id="documentAddID" promptText="ID" />
                      <TextField fx:id="documentAddName" promptText="Book name" />
                      <TextField fx:id="documentAddAuthor" promptText="Author" />
-
-                      <Button fx:id="addButton" onAction="#onAddButtonClick" text="Add!">
-                        <VBox.margin>
-                           <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                        </VBox.margin>
-                     </Button>
+                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                            <Button fx:id="addButton" onAction="#onAddButtonClick" text="Add">
+                              <HBox.margin>
+                                 <Insets right="20.0" />
+                              </HBox.margin>
+                           </Button>
+                           <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout">
+                              <HBox.margin>
+                                 <Insets left="20.0" />
+                              </HBox.margin>
+                           </Button>
+                        </children>
+                     </HBox>
                   </VBox>
                </content>
             </Tab>
