--- a/src/main/resources/org/proview/test/StudentView.fxml
+++ b/src/main/resources/org/proview/test/StudentView.fxml
@@ -29,11 +29,20 @@
                               <Insets left="100.0" right="100.0" />
                            </VBox.margin>
                         </TextField>
-                        <Button fx:id="borrowButton" onAction="#onBorrowButtonClick" text="Borrow">
-                           <VBox.margin>
-                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                           </VBox.margin>
-                        </Button>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Button fx:id="borrowButton" onAction="#onBorrowButtonClick" text="Borrow">
+                                 <HBox.margin>
+                                    <Insets right="20.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout">
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
                         <Label alignment="CENTER" text="User's Issue List">
                            <font>
                               <Font name="System Bold" size="12.0" />
