--- a/src/main/resources/org/proview/test/AdminView.fxml
+++ b/src/main/resources/org/proview/test/AdminView.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -18,13 +20,32 @@
                <content>
                   <VBox alignment="CENTER" spacing="20.0">
                       <padding>
-                          <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
+                          <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
                       </padding>
                      <TextField fx:id="documentAddName" promptText="Book name" />
                      <TextField fx:id="documentAddAuthor" promptText="Author" />
+                     <HBox prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                           <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                              <children>
+                                 <Button fx:id="addCoverButton" mnemonicParsing="false" onAction="#onAddCoverButtonClick" text="Add cover" />
+                                 <Label fx:id="fileAddedLabel" text="...">
+                                    <VBox.margin>
+                                       <Insets top="20.0" />
+                                    </VBox.margin>
+                                 </Label>
+                              </children>
+                           </VBox>
+                           <ImageView fx:id="coverImageView" fitHeight="150.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                              <HBox.margin>
+                                 <Insets left="20.0" />
+                              </HBox.margin>
+                           </ImageView>
+                        </children>
+                     </HBox>
                      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                         <children>
-                            <Button fx:id="addButton" onAction="#onAddButtonClick" text="Add">
+                            <Button fx:id="addDocumentButton" onAction="#onAddDocumentButtonClick" text="Add">
                               <HBox.margin>
                                  <Insets right="20.0" />
                               </HBox.margin>
