Add a sample home view fxml & Rename files

--- a/src/main/resources/org/proview/test/CreateIssueView.fxml
+++ b/src/main/resources/org/proview/test/CreateIssueView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.StudentView">
+<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.CreateIssueView">
    <children>
       <ListView fx:id="documentList" prefHeight="200.0" prefWidth="200.0" />
       <TabPane>
