--- a/src/main/resources/org/proview/test/EditDocumentView.fxml
+++ b/src/main/resources/org/proview/test/EditDocumentView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.AdminView">
+<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.EditDocumentView">
    <children>
       <ListView fx:id="documentList" prefHeight="200.0" prefWidth="200.0" />
       <TabPane>
