--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -10,13 +10,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.HomeView">
    <top>
-      <AnchorPane prefHeight="65.0" prefWidth="1000.0" style="-fx-background-color: #FFC1C3;" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="topPane" prefHeight="65.0" prefWidth="1000.0" style="-fx-background-color: #FFC1C3;" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="843.0" layoutY="20.0" mnemonicParsing="false" text="Logout" />
-            <Button layoutX="763.0" layoutY="20.0" mnemonicParsing="false" text="Edit Book" />
+            <Button fx:id="logoutButton" layoutX="843.0" layoutY="20.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout" />
+            <Button fx:id="editBookButton" layoutX="763.0" layoutY="20.0" mnemonicParsing="false" text="Edit Book" />
             <Button layoutX="661.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="Borrow Book" />
             <Button layoutX="934.0" layoutY="20.0" mnemonicParsing="false" text="Profile" />
             <ImageView fitHeight="61.0" fitWidth="76.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" />
