--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -15,7 +15,7 @@
       <AnchorPane fx:id="topPane" prefHeight="65.0" prefWidth="1000.0" style="-fx-background-color: #FFC1C3;" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="logoutButton" layoutX="843.0" layoutY="20.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout" />
-            <Button fx:id="editBookButton" layoutX="763.0" layoutY="20.0" mnemonicParsing="false" text="Edit Book" />
+            <Button fx:id="editBookButton" layoutX="763.0" layoutY="20.0" mnemonicParsing="false" onAction="#onEditBookButtonClick" text="Edit Book" />
             <Button layoutX="661.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="Borrow Book" />
             <Button layoutX="934.0" layoutY="20.0" mnemonicParsing="false" text="Profile" />
             <ImageView fitHeight="61.0" fitWidth="76.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" />
@@ -24,46 +24,33 @@
       </AnchorPane>
    </top>
    <left>
-      <AnchorPane prefHeight="586.0" prefWidth="74.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="578.0" prefWidth="204.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="37.0" layoutY="14.0" text="Recent reviews">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+         </children></AnchorPane>
    </left>
    <center>
       <VBox prefHeight="586.0" prefWidth="231.0" BorderPane.alignment="CENTER">
          <children>
             <AnchorPane prefHeight="586.0" prefWidth="539.0">
                <children>
-                  <Label layoutX="14.0" prefHeight="56.0" prefWidth="587.0" text="Newly-added books">
+                  <Label layoutX="22.0" layoutY="14.0" prefHeight="30.0" prefWidth="586.0" text="Top-rated books">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Label>
-                  <HBox layoutX="14.0" layoutY="48.0" prefHeight="100.0" prefWidth="587.0" style="-fx-background-color: #FFD6D7;" />
-                  <Label layoutX="14.0" layoutY="176.0" prefHeight="30.0" prefWidth="586.0" text="Top-rated books">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <HBox layoutX="14.0" layoutY="225.0" prefHeight="100.0" prefWidth="589.0" style="-fx-background-color: #FFD6D7;" />
-                  <Label layoutX="14.0" layoutY="362.0" text="Trending books">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <HBox layoutX="14.0" layoutY="409.0" prefHeight="100.0" prefWidth="587.0" style="-fx-background-color: #FFD6D7;" />
+                  <ListView fx:id="topRatedBookListView" layoutX="22.0" layoutY="57.0" prefHeight="465.0" prefWidth="520.0" />
                </children>
             </AnchorPane>
          </children>
       </VBox>
    </center>
    <right>
-      <AnchorPane prefHeight="586.0" prefWidth="309.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label layoutX="20.0" layoutY="14.0" text="Recent reviews">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
+      <AnchorPane prefHeight="578.0" prefWidth="80.0" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
       <AnchorPane prefHeight="49.0" prefWidth="1000.0" BorderPane.alignment="CENTER" />
