--- a/src/main/resources/org/proview/test/EditBookView.fxml
+++ b/src/main/resources/org/proview/test/EditBookView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.EditBookView">
+<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.EditBookView">
    <children>
       <ListView fx:id="bookList" prefHeight="200.0" prefWidth="200.0" />
       <TabPane>
@@ -24,6 +24,9 @@
                       </padding>
                      <TextField fx:id="bookAddName" promptText="Book name" />
                      <TextField fx:id="bookAddAuthor" promptText="Author" />
+                     <TextField fx:id="bookAddDescription" promptText="Description" />
+                     <TextField fx:id="bookAddCopies" promptText="Amount of copies available" />
+                     <TextField fx:id="bookAddTag" promptText="Tag" />
                      <HBox prefHeight="100.0" prefWidth="200.0">
                         <children>
                            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
@@ -43,7 +46,7 @@
                            </ImageView>
                         </children>
                      </HBox>
-                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <HBox alignment="CENTER" prefHeight="54.0" prefWidth="249.0">
                         <children>
                             <Button fx:id="addBookButton" onAction="#onAddBookButtonClick" text="Add">
                               <HBox.margin>
