--- a/src/main/resources/org/proview/test/LoginView.fxml
+++ b/src/main/resources/org/proview/test/LoginView.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.LoginView">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.LoginView">
    <children>
       <TextField fx:id="loginUsernameField" promptText="Username" />
       <TextField fx:id="loginPasswordField" promptText="Password" />
       <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonClick" text="Login" textAlignment="CENTER" />
+      <Button fx:id="registerButton" mnemonicParsing="false" onAction="#onRegisterButtonClick" text="Register" textAlignment="CENTER"/>
    </children>
    <padding>
       <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
