--- a/src/main/resources/org/proview/test/BookCellView.fxml
+++ b/src/main/resources/org/proview/test/BookCellView.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.BookCellView">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.BookCellView">
    <children>
-      <ImageView fx:id="coverImageView" fitHeight="150.0" fitWidth="112.5" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="coverImageView" fitWidth="112.5" pickOnBounds="true" preserveRatio="true" />
       <VBox prefHeight="250.0" prefWidth="550.0">
          <children>
             <Label fx:id="titleLabel" alignment="TOP_LEFT" prefHeight="31.0" prefWidth="355.0" text="#1. Book #1">
