--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.HomeView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.HomeView">
    <top>
       <AnchorPane fx:id="topPane" prefHeight="65.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;" BorderPane.alignment="CENTER">
          <children>
@@ -38,19 +38,25 @@
          <children>
             <AnchorPane prefHeight="586.0" prefWidth="539.0">
                <children>
-                  <Label layoutX="22.0" layoutY="14.0" prefHeight="30.0" prefWidth="586.0" text="Top-rated books">
+                  <Label layoutX="22.0" layoutY="14.0" prefHeight="30.0" prefWidth="499.0" text="Top-rated books">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Label>
-                  <ListView fx:id="topRatedBookListView" layoutX="22.0" layoutY="57.0" prefHeight="465.0" prefWidth="520.0" />
+                  <ListView fx:id="topRatedBookListView" layoutX="22.0" layoutY="57.0" prefHeight="465.0" prefWidth="500.0" />
+                  <Label layoutX="541.0" layoutY="14.0" prefHeight="30.0" prefWidth="499.0" text="Trending (7 days)">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <ListView fx:id="trendingBookListView" layoutX="540.0" layoutY="57.0" prefHeight="465.0" prefWidth="500.0" />
                </children>
             </AnchorPane>
          </children>
       </VBox>
    </center>
    <right>
-      <AnchorPane prefHeight="578.0" prefWidth="80.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="578.0" prefWidth="17.0" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
       <AnchorPane prefHeight="49.0" prefWidth="1000.0" BorderPane.alignment="CENTER" />
