--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -1,28 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.HomeView">
+<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.HomeView">
    <top>
-      <AnchorPane fx:id="topPane" prefHeight="65.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="logoutButton" layoutX="843.0" layoutY="20.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout" />
-            <Button fx:id="editBookButton" layoutX="763.0" layoutY="20.0" mnemonicParsing="false" onAction="#onEditBookButtonClick" text="Edit Book" />
-            <Button layoutX="661.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="88.0" text="Borrow Book" />
-            <Button layoutX="934.0" layoutY="20.0" mnemonicParsing="false" text="Profile" />
-            <ImageView fitHeight="61.0" fitWidth="76.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" />
-            <Pane layoutX="90.0" layoutY="19.0" prefHeight="30.0" prefWidth="550.0" style="-fx-background-color: #FFFFFF;" />
-         </children>
-      </AnchorPane>
+      <fx:include source="NavBar.fxml" />
    </top>
    <left>
       <AnchorPane prefHeight="578.0" prefWidth="204.0" BorderPane.alignment="CENTER">
@@ -39,7 +27,7 @@
          <content>
             <VBox prefHeight="586.0" prefWidth="231.0">
                <children>
-                  <AnchorPane prefHeight="586.0" prefWidth="539.0">
+                  <AnchorPane prefHeight="586.0" prefWidth="1041.0">
                      <children>
                         <Label layoutX="22.0" layoutY="14.0" prefHeight="30.0" prefWidth="499.0" text="Top-rated books">
                            <font>
