--- a/src/main/resources/org/proview/test/BookCellView.fxml
+++ b/src/main/resources/org/proview/test/BookCellView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.BookCellView">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onMouseClick" prefHeight="150.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.BookCellView">
    <children>
       <ImageView fx:id="coverImageView" fitWidth="112.5" pickOnBounds="true" preserveRatio="true" />
       <VBox prefHeight="250.0" prefWidth="550.0">
