--- a/src/main/resources/org/proview/test/NavBar.fxml
+++ b/src/main/resources/org/proview/test/NavBar.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox prefHeight="50.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.NavBarView">
+<HBox prefHeight="50.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.NavBarView">
    <children>
-      <AnchorPane fx:id="topPane" prefHeight="4.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;">
+      <AnchorPane fx:id="topPane" onKeyReleased="#onKeyReleased" prefHeight="4.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;">
          <children>
             <Button fx:id="logoutButton" layoutX="1123.0" layoutY="20.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout" />
             <Button fx:id="editBookButton" layoutX="1043.0" layoutY="20.0" mnemonicParsing="false" onAction="#onEditBookButtonClick" text="Edit Book" />
