--- a/src/main/resources/org/proview/test/BookInfo.fxml
+++ b/src/main/resources/org/proview/test/BookInfo.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="770.0" prefWidth="1412.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.BookInfoView">
-    <top>
-        <fx:include source="NavBar.fxml" />
-    </top>
+   <top>
+      <fx:include source="NavBar.fxml" />
+   </top>
    <center>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="1187.0">
          <children>
@@ -47,6 +48,7 @@
          <children>
             <Button fx:id="editButton" layoutX="92.0" layoutY="2.0" mnemonicParsing="false" onAction="#onEditButtonClick" text="Edit" />
             <Button fx:id="backButton" alignment="TOP_LEFT" layoutX="632.0" layoutY="2.0" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back" />
+            <TextField fx:id="durationField" alignment="CENTER" layoutX="207.0" promptText="Duration" />
          </children>
       </AnchorPane>
    </bottom>
