--- a/src/main/resources/org/proview/test/RegisterView.fxml
+++ b/src/main/resources/org/proview/test/RegisterView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<HBox prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.RegisterView">
+<HBox prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.RegisterView">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
