Rename NavBar to NavBarView for consistency

--- a/src/main/resources/org/proview/test/BookInfoView.fxml
+++ b/src/main/resources/org/proview/test/BookInfoView.fxml
@@ -15,7 +15,7 @@
 
 <BorderPane fx:id="borderPane" prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.BookInfoView">
    <top>
-      <fx:include source="NavBar.fxml" />
+      <fx:include source="NavBarView.fxml" />
    </top>
    <center>
       <ScrollPane>
