--- a/src/main/resources/org/proview/test/EditBookInfoView.fxml
+++ b/src/main/resources/org/proview/test/EditBookInfoView.fxml
@@ -12,7 +12,7 @@
 
 <BorderPane prefHeight="473.0" prefWidth="1154.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditBookInfoView">
     <top>
-        <fx:include source="NavBar.fxml" />
+        <fx:include source="NavBarView.fxml" />
     </top>
    <center>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1187.0">
