--- a/src/main/resources/org/proview/test/ProfileBookListCardView.fxml
+++ b/src/main/resources/org/proview/test/ProfileBookListCardView.fxml
@@ -21,7 +21,7 @@
                         <Insets bottom="10.0" left="20.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="borrowingListView" prefWidth="400.0">
+                  <ListView fx:id="borrowingListView" prefHeight="100.0" prefWidth="400.0">
                      <padding>
                         <Insets bottom="10.0" />
                      </padding>
@@ -41,7 +41,7 @@
                         <Insets bottom="10.0" left="10.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="favouriteListView" prefWidth="400.0">
+                  <ListView fx:id="favouriteListView" prefHeight="100.0" prefWidth="400.0">
                      <padding>
                         <Insets bottom="10.0" />
                      </padding>
@@ -65,7 +65,7 @@
                         <Insets bottom="10.0" left="20.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="overdueListView" prefWidth="400.0">
+                  <ListView fx:id="overdueListView" prefHeight="100.0" prefWidth="400.0">
                      <padding>
                         <Insets bottom="10.0" />
                      </padding>
@@ -85,7 +85,7 @@
                         <Insets bottom="10.0" left="10.0" top="20.0" />
                      </VBox.margin>
                   </Label>
-                  <ListView fx:id="pastIssuesListView" prefWidth="400.0">
+                  <ListView fx:id="pastIssuesListView" prefHeight="100.0" prefWidth="400.0">
                      <padding>
                         <Insets bottom="10.0" />
                      </padding>
