--- a/src/main/resources/org/proview/test/ProfileBookListCompactView.fxml
+++ b/src/main/resources/org/proview/test/ProfileBookListCompactView.fxml
@@ -16,7 +16,7 @@
             <Insets bottom="10.0" left="20.0" top="20.0" />
          </VBox.margin>
       </Label>
-      <ListView fx:id="favouriteListView" prefWidth="800.0">
+      <ListView fx:id="favouriteListView" prefHeight="100.0" prefWidth="800.0">
          <padding>
             <Insets bottom="10.0" />
          </padding>
@@ -32,7 +32,7 @@
             <Insets bottom="10.0" left="20.0" top="20.0" />
          </VBox.margin>
       </Label>
-      <ListView fx:id="borrowingListView" prefWidth="800.0">
+      <ListView fx:id="borrowingListView" prefHeight="100.0" prefWidth="800.0">
          <VBox.margin>
             <Insets left="20.0" right="30.0" />
          </VBox.margin>
@@ -48,7 +48,7 @@
             <Insets bottom="10.0" left="20.0" />
          </VBox.margin>
       </Label>
-      <ListView fx:id="overdueListView" prefWidth="800.0">
+      <ListView fx:id="overdueListView" prefHeight="100.0" prefWidth="800.0">
          <VBox.margin>
             <Insets left="20.0" right="30.0" />
          </VBox.margin>
@@ -64,7 +64,7 @@
             <Insets bottom="10.0" left="20.0" />
          </VBox.margin>
       </Label>
-      <ListView fx:id="pastIssuesListView" prefWidth="800.0">
+      <ListView fx:id="pastIssuesListView" prefHeight="100.0" prefWidth="800.0">
          <VBox.margin>
             <Insets left="20.0" right="30.0" />
          </VBox.margin>
