Fix css of button hover state making icons peculiar

--- a/src/main/resources/org/proview/test/NavBarView.fxml
+++ b/src/main/resources/org/proview/test/NavBarView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<HBox prefHeight="50.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
+<HBox fx:id="navBarHBox" prefHeight="50.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
    <children>
       <AnchorPane fx:id="topPane" onKeyReleased="#onKeyReleased" prefHeight="4.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;">
          <children>
@@ -18,7 +18,7 @@
                <graphic>
                   <VBox alignment="CENTER">
                      <children>
-                        <FontIcon iconLiteral="fas-sign-out-alt">
+                        <FontIcon iconLiteral="fas-sign-out-alt" iconSize="24">
                            <font>
                               <Font size="24.0" />
                            </font></FontIcon>
@@ -30,7 +30,7 @@
                <graphic>
                   <VBox alignment="CENTER">
                      <children>
-                        <FontIcon iconLiteral="far-edit">
+                        <FontIcon iconLiteral="far-edit" iconSize="24">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -43,7 +43,7 @@
                <graphic>
                   <VBox alignment="CENTER">
                      <children>
-                        <FontIcon iconLiteral="fas-book">
+                        <FontIcon iconLiteral="fas-book" iconSize="24">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -55,11 +55,11 @@
             <Button fx:id="profileButton" layoutX="1214.0" layoutY="20.0" mnemonicParsing="false" onAction="#onProfileButtonClick" text="Profile" />
             <ImageView fitHeight="61.0" fitWidth="76.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" />
             <TextField fx:id="bookSearchBar" layoutX="52.0" layoutY="19.0" prefHeight="35.0" prefWidth="555.0" promptText="Testing search bar" />
-            <Button fx:id="searchButton" layoutX="632.0" layoutY="19.0" mnemonicParsing="false" onAction="#onSearchButtonClick" prefHeight="35.0" prefWidth="60.0" text="Search">
+            <Button fx:id="searchButton" layoutX="629.0" layoutY="12.0" mnemonicParsing="false" onAction="#onSearchButtonClick" prefHeight="35.0" prefWidth="60.0" text="Search">
                <graphic>
                   <VBox alignment="CENTER">
                      <children>
-                        <FontIcon iconLiteral="fas-search">
+                        <FontIcon iconLiteral="fas-search" iconSize="24">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -72,7 +72,7 @@
                <graphic>
                   <VBox alignment="CENTER">
                      <children>
-                        <FontIcon iconLiteral="far-list-alt">
+                        <FontIcon iconLiteral="far-list-alt" iconSize="24">
                            <font>
                               <Font size="24.0" />
                            </font>
@@ -85,7 +85,7 @@
                <graphic>
                   <VBox alignment="CENTER">
                      <children>
-                        <FontIcon iconLiteral="fas-home">
+                        <FontIcon iconLiteral="fas-home" iconSize="24">
                            <font>
                               <Font size="24.0" />
                            </font>
