Clean up debug lines

--- a/src/main/resources/org/proview/test/NavBarView.fxml
+++ b/src/main/resources/org/proview/test/NavBarView.fxml
@@ -21,7 +21,8 @@
                         <FontIcon iconLiteral="fas-sign-out-alt" iconSize="24">
                            <font>
                               <Font size="24.0" />
-                           </font></FontIcon>
+                           </font>
+                        </FontIcon>
                         <Label text="Sign out" />
                      </children>
                   </VBox>
