--- a/src/main/resources/org/proview/test/EditBookView.fxml
+++ b/src/main/resources/org/proview/test/EditBookView.fxml
@@ -8,80 +8,91 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditBookView">
-   <children>
-      <ListView fx:id="bookList" prefHeight="200.0" prefWidth="200.0" />
-      <TabPane>
-         <tabs>
-            <Tab closable="false" text="Add">
-               <content>
-                  <VBox alignment="CENTER" spacing="20.0">
-                      <padding>
-                          <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-                      </padding>
-                     <TextField fx:id="bookAddName" promptText="Book name" />
-                     <TextField fx:id="bookAddAuthor" promptText="Author" />
-                     <TextField fx:id="bookAddDescription" promptText="Description" />
-                     <TextField fx:id="bookAddCopies" promptText="Amount of copies available" />
-                     <TextField fx:id="bookAddTag" promptText="Tag" />
-                     <HBox prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                           <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+<BorderPane xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditBookView">
+   <top>
+      <fx:include source="NavBar.fxml" />
+   </top>
+   <left>
+      <fx:include source="AdminManagementNavBarView.fxml" />
+   </left>
+   <center>
+      <HBox>
+         <children>
+            <ListView fx:id="bookList" prefHeight="578.0" prefWidth="390.0" />
+            <TabPane prefHeight="578.0" prefWidth="802.0">
+               <tabs>
+                  <Tab closable="false" text="Add">
+                     <content>
+                        <VBox alignment="CENTER" prefHeight="549.0" prefWidth="483.0" spacing="20.0">
+                            <padding>
+                                <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
+                            </padding>
+                           <TextField fx:id="bookAddName" promptText="Book name" />
+                           <TextField fx:id="bookAddAuthor" promptText="Author" />
+                           <TextField fx:id="bookAddDescription" promptText="Description" />
+                           <TextField fx:id="bookAddCopies" promptText="Amount of copies available" />
+                           <TextField fx:id="bookAddTag" promptText="Tag" />
+                           <HBox prefHeight="100.0" prefWidth="200.0">
                               <children>
-                                 <Button fx:id="addCoverButton" mnemonicParsing="false" onAction="#onAddCoverButtonClick" text="Add cover" />
-                                 <Label fx:id="fileAddedLabel" text="...">
-                                    <VBox.margin>
-                                       <Insets top="20.0" />
-                                    </VBox.margin>
-                                 </Label>
+                                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                                    <children>
+                                       <Button fx:id="addCoverButton" mnemonicParsing="false" onAction="#onAddCoverButtonClick" text="Add cover" />
+                                       <Label fx:id="fileAddedLabel" text="...">
+                                          <VBox.margin>
+                                             <Insets top="20.0" />
+                                          </VBox.margin>
+                                       </Label>
+                                    </children>
+                                 </VBox>
+                                 <ImageView fx:id="coverImageView" fitHeight="150.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                                    <HBox.margin>
+                                       <Insets left="20.0" />
+                                    </HBox.margin>
+                                 </ImageView>
                               </children>
-                           </VBox>
-                           <ImageView fx:id="coverImageView" fitHeight="150.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                              <HBox.margin>
-                                 <Insets left="20.0" />
-                              </HBox.margin>
-                           </ImageView>
-                        </children>
-                     </HBox>
-                     <HBox alignment="CENTER" prefHeight="54.0" prefWidth="249.0">
-                        <children>
-                            <Button fx:id="addBookButton" onAction="#onAddBookButtonClick" text="Add">
-                              <HBox.margin>
-                                 <Insets right="20.0" />
-                              </HBox.margin>
-                           </Button>
-                           <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back" />
-                           <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout">
-                              <HBox.margin>
-                                 <Insets left="20.0" />
-                              </HBox.margin>
-                           </Button>
-                        </children>
-                     </HBox>
-                  </VBox>
-               </content>
-            </Tab>
-            <Tab closable="false" text="Remove">
-               <content>
-                  <VBox alignment="CENTER" spacing="20.0">
-                     <padding>
-                        <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
-                     </padding>
-                     <children>
-                        <TextField fx:id="bookRemoveID" promptText="ID" />
-                        <Button onAction="#onRemoveButtonClick" text="Remove!">
-                           <VBox.margin>
-                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                           </VBox.margin>
-                        </Button>
-                     </children>
-                  </VBox>
-               </content>
-            </Tab>
-         </tabs>
-      </TabPane>
-   </children>
-</HBox>
+                           </HBox>
+                           <HBox alignment="CENTER" prefHeight="54.0" prefWidth="249.0">
+                              <children>
+                                  <Button fx:id="addBookButton" onAction="#onAddBookButtonClick" text="Add">
+                                    <HBox.margin>
+                                       <Insets right="20.0" />
+                                    </HBox.margin>
+                                 </Button>
+                                 <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back" />
+                                 <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout">
+                                    <HBox.margin>
+                                       <Insets left="20.0" />
+                                    </HBox.margin>
+                                 </Button>
+                              </children>
+                           </HBox>
+                        </VBox>
+                     </content>
+                  </Tab>
+                  <Tab closable="false" text="Remove">
+                     <content>
+                        <VBox alignment="CENTER" spacing="20.0">
+                           <padding>
+                              <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
+                           </padding>
+                           <children>
+                              <TextField fx:id="bookRemoveID" promptText="ID" />
+                              <Button onAction="#onRemoveButtonClick" text="Remove!">
+                                 <VBox.margin>
+                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                        </VBox>
+                     </content>
+                  </Tab>
+               </tabs>
+            </TabPane>
+         </children>
+      </HBox>
+   </center>
+</BorderPane>
