--- a/src/main/resources/org/proview/test/BookInfoView.fxml
+++ b/src/main/resources/org/proview/test/BookInfoView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,10 +11,12 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.BookInfoView">
+<BorderPane fx:id="borderPane" prefHeight="2000.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.BookInfoView">
    <top>
       <fx:include source="NavBarView.fxml" />
    </top>
@@ -64,8 +67,40 @@
                      </font>
                   </Label>
                   <Line endX="750.0" layoutX="114.0" layoutY="428.0" startX="-100.0" />
-                  <TextArea fx:id="reviewTextArea" layoutX="17.0" layoutY="441.0" prefHeight="213.0" prefWidth="850.0" wrapText="true" />
-                  <Button fx:id="submitReviewButton" layoutX="809.0" layoutY="671.0" mnemonicParsing="false" onAction="#onSubmitReviewButtonClick" text="Submit" />
+                  <VBox layoutX="17.0" layoutY="441.0">
+                     <children>
+                        <HBox>
+                           <children>
+                              <Label text="Rate: ">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Label>
+                              <HBox fx:id="starRatingBar" prefHeight="35.0" prefWidth="120.0">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </HBox.margin>
+                                 <padding>
+                                    <Insets top="5.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                        </HBox>
+                        <TextArea fx:id="reviewTextArea" prefHeight="213.0" prefWidth="850.0" wrapText="true" />
+                        <HBox alignment="CENTER_RIGHT">
+                           <children>
+                              <Button fx:id="submitReviewButton" alignment="CENTER" mnemonicParsing="false" onAction="#onSubmitReviewButtonClick" text="Submit">
+                                 <HBox.margin>
+                                    <Insets right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                   <ListView fx:id="reviewListView" layoutX="13.0" layoutY="735.0" prefHeight="287.0" prefWidth="850.0" />
                   <Button fx:id="starButton" contentDisplay="GRAPHIC_ONLY" layoutX="824.0" layoutY="46.0" mnemonicParsing="false" onAction="#onStarButtonClicked" text="Button" />
                </children>
